Fixed /blog/index.html page positioning and listing Created a postlist css class to align the post lists. Reversd the post list so the correct one will display first.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -34,6 +34,10 @@ a:hover {
 	line-height: 25px;
 }
 
+.postlist {
+	left: 30%;
+}
+
 
 ul {
 	padding: 0px;
